Fixed alignment

--- a/style.css
+++ b/style.css
@@ -1,70 +1,65 @@
 * {
-    padding: 0;
-    margin: 0;
-    overflow: hidden;
-    flex-direction: row;
-  
-    
+  padding: 0;
+  margin: 0;
+  overflow: hidden;
+  flex-direction: row;
 }
 
-.main{
-text-align:center;  
-  
-   display:inline-block;
-  
+body {
+  width: 100vw;
+  height: 100vh;
+}
+
+.main {
+  text-align: center;
+  width: 100%;
+  height: 100%;
+
+  display: inline-block;
 }
 
 .heading {
-    background-color: black ;
-    color: white;
-    margin-bottom: 50px ;
+  background-color: black;
+  color: white;
+  margin-bottom: 50px;
+  width: 100%;
 }
 
 .play_area {
-    margin-left: 40% ;
-    padding: 20px ;
-
-
+  padding: 20px;
 }
-.dice_image img{
-
-    border: 2px solid #000 ;
-    margin-bottom: 30px ;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    
-
-
+.dice_image img {
+  border: 2px solid #000;
+  margin-bottom: 30px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .gen_number label {
-    width: 100% ;
+  width: 100%;
 }
 
 #btn_gen {
-
-    width: 20% ;
-    text-align: center;
-    background-color: blue;
-    color: white;
-    height: 10%;
-    border-radius: 20px;
-    border: 2px solid white ;
-    margin-bottom: 20px ;
-    
+  width: 20%;
+  text-align: center;
+  background-color: blue;
+  color: white;
+  height: 10%;
+  border-radius: 20px;
+  border: 2px solid white;
+  margin-bottom: 20px;
 }
 #btn_gen:hover {
-    background-color: white;
-    color: blue ;
-    transition: border 0.2s ;
-    border: 2px solid blue ;
-
+  background-color: white;
+  color: blue;
+  transition: border 0.2s;
+  border: 2px solid blue;
 }
 
 #score {
-   display:inline-block;
-   text-align:center;
+  display: inline-block;
+  text-align: center;
 }
 
 .dice_image {
-    border-radius: 15px;
+  border-radius: 15px;
 }
